PROJECT(SRS-FIGURE)
SET(PROTOCOL_RTMP_HANDSHAKE ./protocol/srs_figure_rtmp_handshake.cpp)
SET(APP_SOCKET ./app/srs_figure_app_socket.cpp)
SET(APP_LOG ./app/srs_figure_app_log.cpp)
SET(CORE_CORE ./core/srs_figure_core.cpp)
SET(SRC_LIST ${CORE_CORE} ${APP_LOG} ${APP_SOCKET} ${PROTOCOL_RTMP_HANDSHAKE} SRSClient.cpp srs-figure.cpp )
SET(CMAKE_BUILD_TYPE Debug)
MESSAGE(STATUS "This is BINARY dir" ${SRS_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir" ${SRS_SOURCE_DIR})
ADD_EXECUTABLE(srs-figure ${SRC_LIST})
